--- a/web/templates/runs/url.twig
+++ b/web/templates/runs/url.twig
@@ -9,33 +9,10 @@
     <div id="memory-line-graph" class="chart-container span6"></div>
 </div>
 
-<div class="row-fluid">
-    <table class="table table-hover table-sort">
-        <thead>
-            <tr>
-                <th>URL</th>
-                <th>Time</th>
-                <th class="right"><span class="tip" title="Wall time">wt</span></th>
-                <th class="right"><span class="tip" title="CPU time">cpu</span></th>
-                <th class="right"><span class="tip" title="Memory Usage">mu</span></th>
-                <th class="right"><span class="tip" title="Peak Memory Usage">pmu</span></th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for result in runs %}
-        <tr>
-            <td><a href="{{ url('/url.php', {'url': result.meta.url}) }}">{{ result.meta.url }}</a></td>
-            <td><a href="{{ url('/run.php', {'id': result.id|trim }) }}">{{ result.meta.SERVER.REQUEST_TIME|date(date_format) }}</a></td>
-            <td class="right">{{ result.get('main()', 'wt') |as_time }}</td>
-            <td class="right">{{ result.get('main()', 'cpu') |as_time }}</td>
-            <td class="right">{{ result.get('main()', 'mu') |as_bytes }}</td>
-            <td class="right">{{ result.get('main()', 'pmu') |as_bytes }}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
+{% include 'runs/paginated-list.twig' %}
+
 {{ helpers.pagination(url('/url.php', {'url': url}), page, total_pages) }}
+
 {% endblock %}
 
 {% block jsfoot %}
