Change id => base
Both base & head are ID's use better names for things.

--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -31,7 +31,7 @@
 <div class="span9">
 
     <div class="row-fluid">
-        <a href="{{ url('/compare.php', {id: result.id|trim }) }}" id="compare-button" class="btn back-link">
+        <a href="{{ url('/compare.php', {base: result.id|trim }) }}" id="compare-button" class="btn back-link">
             Compare this run
         </a>
 
