--- a/web/templates/runs/compare.twig
+++ b/web/templates/runs/compare.twig
@@ -2,7 +2,7 @@
 {% import 'macros/helpers.twig' as helpers %}
 
 {% block content %}
-<h1>Compare runs</h1>
+<h1>Compare runs for {{ base_run.meta.simple_url }}</h1>
 
 {% if not base_run %}
 <div class="row-fluid row-spaced">
