--- a/web/templates/runs/paginated-list.twig
+++ b/web/templates/runs/paginated-list.twig
@@ -2,7 +2,9 @@
     <table class="table table-hover table-sort">
         <thead>
             <tr>
+                {% if show_compare_link %}
                 <th>&nbsp;</th>
+                {% endif %}
                 <th>URL</th>
                 <th>Time</th>
                 <th class="right"><span class="tip" title="Wall time">wt</span></th>
@@ -16,7 +18,7 @@
         <tr>
             {% if show_compare_link %}
             <td>
-                <a class="btn btn-small" href="{{ url('/compare.php', {id: base_run.id|trim, head: result.id|trim}) }}">
+                <a class="btn btn-small" href="{{ url('/compare.php', {base: base_run.id|trim, head: result.id|trim}) }}">
                 Compare
                 </a>
             </td>
