--- a/web/templates/runs/paginated-list.twig
+++ b/web/templates/runs/paginated-list.twig
@@ -1,3 +1,4 @@
+{# Template fragment for outputting a list of runs #}
 <div class="row-fluid">
     <table class="table table-hover table-sort">
         <thead>
