--- a/web/templates/runs/compare.twig
+++ b/web/templates/runs/compare.twig
@@ -12,13 +12,13 @@
 </div>
 {% else %}
     <div class="row-fluid row-spaced">
-        <span class="badge badge-info compare-base">
+        <span class="badge compare-base">
             base: {{ base_run.meta.simple_url }} - {{ base_run.meta.date|date(date_format) }}
         </span>
         <span class="compare-elipsis">&hellip;</span>
 
         {% if head_run %}
-        <span class="badge badge-info compare-head">
+        <span class="badge compare-head">
             head: {{ head_run.meta.simple_url }} - {{ head_run.meta.date|date(date_format) }}
         </span>
         <a class="btn btn-mini" href="{{ url('/compare.php', {id: base_run.id|trim }) }}">change</a>
@@ -33,6 +33,12 @@
         {% include 'runs/paginated-list.twig' with {runs: candidates.results, show_compare_link: true} %}
         {{ helpers.pagination('/compare.php', candidates.page, candidates.totalPages, url_params) }}
     </div>
+    {% endif %}
+
+    {% if comparison %}
+        <div class="row-fluid row-spaced">
+        {% include 'runs/compare-details.twig' %}
+        </div>
     {% endif %}
 
 {% endif %}
