--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -50,11 +50,11 @@
         <tbody>
         {% for value in watches %}
         <tr>
-            <td>{{ value.function }}</td>
-            <td>{{ value.ct }}</td>
-            <td>{{ value.ewt|as_time }}</td>
-            <td>{{ value.emu|as_bytes }}</td>
-            <td>{{ value.epmu|as_bytes }}</td>
+            <td class="right">{{ value.function }}</td>
+            <td class="right">{{ value.ct }}</td>
+            <td class="right">{{ value.ewt|as_time }}</td>
+            <td class="right">{{ value.emu|as_bytes }}</td>
+            <td class="right">{{ value.epmu|as_bytes }}</td>
         </tr>
         {% endfor %}
         </tbody>
@@ -114,15 +114,15 @@
         <td class="text">
             <a href="{{ url('/symbol.php', {'id': result.id|trim, 'symbol': key}) }}">{{ key }}</a>
         </td>
-        <td>{{ value.ct }}</td>
-        <td>{{ value.ewt|as_time }}</td>
-        <td>{{ value.ecpu|as_time }}</td>
-        <td>{{ value.emu|as_bytes }}</td>
-        <td>{{ value.epmu|as_bytes }}</td>
-        <td>{{ value.wt|as_time }}</td>
-        <td>{{ value.cpu|as_time }}</td>
-        <td>{{ value.mu|as_bytes }}</td>
-        <td>{{ value.pmu|as_bytes }}</td>
+        <td class="right">{{ value.ct }}</td>
+        <td class="right">{{ value.ewt|as_time }}</td>
+        <td class="right">{{ value.ecpu|as_time }}</td>
+        <td class="right">{{ value.emu|as_bytes }}</td>
+        <td class="right">{{ value.epmu|as_bytes }}</td>
+        <td class="right">{{ value.wt|as_time }}</td>
+        <td class="right">{{ value.cpu|as_time }}</td>
+        <td class="right">{{ value.mu|as_bytes }}</td>
+        <td class="right">{{ value.pmu|as_bytes }}</td>
     </tr>
     {% endfor %}
     </tbody>
