--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -235,6 +235,15 @@ tr .no-results {
 .compare-head {
     background: #59bdd2;
 }
+.diff-up {
+    color: #d46245;
+}
+.diff-down {
+    color: #637964;
+}
+.diff-same {
+    color: #999;
+}
 
 /**
  * Footer
