--- a/web/templates/macros/helpers.twig
+++ b/web/templates/macros/helpers.twig
@@ -11,25 +11,30 @@
 </dl>
 {% endmacro %}
 
-{% macro sort_link(text, url, sort, direction, search) %}
+{% macro sort_link(text, url, sort, paging, search) %}
 {% set search = search|default({}) %}
-{%- if direction == 'asc' -%}
+{% set classname = '' %}
+{% set direction = 'asc' %}
+{%- if paging.direction == 'asc' -%}
     {% set direction = 'desc' %}
-{%- else -%}
-    {% set direction = 'asc' %}
 {%- endif -%}
+{% if paging.sort == sort %}
+    {% set classname = "sort-#{direction}" %}
+{% endif %}
 {% set params = {'direction': direction, 'sort': sort}|merge(search) %}
-<a class="sort-{{ direction }}" href="{{ url(url, params) }}">{{ text }}</a>
+
+<a class="{{ classname }}" href="{{ url(url, params) }}">{{ text }}</a>
 {% endmacro %}
 
-{% macro pagination(url, page, total_pages, search) %}
+{% macro pagination(url, paging, search) %}
 
 {# Hard code because I'm lazy #}
 {% set num_pages = 10 %}
 {% set midpoint = none %}
 {% set start = 1 %}
-{% set end = total_pages %}
+{% set end = paging.total_pages|default(start) %}
 {% set search = search|default({}) %}
+{% set search = search|merge({direction: paging.direction, sort: paging.sort}) %}
 
 {# show a slice of pages in the middle #}
 {% if total_pages > num_pages %}
@@ -49,21 +54,21 @@
 {% if page == 1 %}
     <li class="disabled"><span>&laquo;</span><li>
 {% else %}
-    <li><a href="{{ url(url, {'page': page - 1}|merge(search)) }}">&laquo;</a><li>
+    <li><a href="{{ url(url, search|merge({'page': page - 1})) }}">&laquo;</a><li>
 {% endif %}
 
 {% for i in start..end %}
     {% if i == page %}
     <li class="active"><span>{{ i }}</span></li>
     {% else %}
-    <li><a href="{{ url(url, {'page': i}|merge(search)) }}">{{ i }}</a></li>
+    <li><a href="{{ url(url, search|merge({'page': i})) }}">{{ i }}</a></li>
     {% endif %}
 {% endfor %}
 
 {% if page == total_pages %}
     <li class="disabled"><span>&raquo;</span></li>
 {% else %}
-    <li><a href="{{ url(url, {'page': page + 1}) }}">&raquo;</a></li>
+    <li><a href="{{ url(url, search|merge({'page': page + 1})) }}">&raquo;</a></li>
 {% endif %}
 </ul>
 </div>
