More fixes to pagination.
Fixes #27

--- a/web/templates/macros/helpers.twig
+++ b/web/templates/macros/helpers.twig
@@ -58,7 +58,7 @@
 {% endif %}
 
 {% for i in start..end %}
-    {% if i == page %}
+    {% if i == paging.page %}
     <li class="active"><span>{{ i }}</span></li>
     {% else %}
     <li><a href="{{ url(url, search|merge({'page': i})) }}">{{ i }}</a></li>
