--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -50,7 +50,7 @@
         <tbody>
         {% for value in watches %}
         <tr>
-            <td class="right">{{ value.function }}</td>
+            <td>{{ value.function }}</td>
             <td class="right">{{ value.ct }}</td>
             <td class="right">{{ value.ewt|as_time }}</td>
             <td class="right">{{ value.emu|as_bytes }}</td>
