--- a/web/templates/runs/compare.twig
+++ b/web/templates/runs/compare.twig
@@ -21,7 +21,8 @@
         <span class="badge compare-head">
             head: {{ head_run.meta.simple_url }} - {{ head_run.meta.SERVER.REQUEST_TIME|date(date_format) }}
         </span>
-        <a class="btn btn-mini" href="{{ url('/compare.php', {id: base_run.id|trim }) }}">change</a>
+        <a class="btn btn-mini" href="{{ url('/compare.php', {'base': base_run.id|trim }) }}">change</a>
+        <a class="btn btn-mini" href="{{ url('/compare.php', {'base': head_run.id|trim, 'head': base_run.id|trim }) }}">reverse</a>
         {% else %}
         <span class="badge">Choose a run below</span>
         {% endif %}
