Clean up header borders.

--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -41,10 +41,10 @@
         <thead>
             <tr>
                 <th>Function</th>
-                <th>Call Count</th>
-                <th><span class="tip" title="Exclusive wall time">ewt</span></th>
-                <th><span class="tip" title="Exclusive memory use">emu</span></th>
-                <th><span class="tip" title="Exclusive peak memory use">epmu</span></th>
+                <th class="right">Call Count</th>
+                <th class="right"><span class="tip" title="Exclusive wall time">ewt</span></th>
+                <th class="right"><span class="tip" title="Exclusive memory use">emu</span></th>
+                <th class="right"><span class="tip" title="Exclusive peak memory use">epmu</span></th>
             </tr>
         </thead>
         <tbody>
