--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -1,6 +1,10 @@
 {% extends 'layout/base.twig' %}
 {% import 'macros/helpers.twig' as helpers %}
 
+{% block title %}
+Run list
+{% endblock %}
+
 {% block content %}
 <h1>{{ title }}</h1>
 
