--- a/web/templates/watch/list.twig
+++ b/web/templates/watch/list.twig
@@ -1,6 +1,10 @@
 {% extends 'layout/base.twig' %}
 {% import 'macros/helpers.twig' as helpers %}
 
+{% block title %}
+Watch - list
+{% endblock %}
+
 {% block content %}
 <h1>Watch functions</h1>
 
