--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Xhgui</title>
+    <title>Xhgui {% block title '' %}</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/datepicker.css" rel="stylesheet" media="screen">
     <link href="css/xhgui.css" rel="stylesheet" media="screen">
