--- a/web/templates/runs/url.twig
+++ b/web/templates/runs/url.twig
@@ -1,6 +1,10 @@
 {% extends 'layout/base.twig' %}
 {% import 'macros/helpers.twig' as helpers %}
 
+{% block title %}
+Url - {{ url }}
+{% endblock %}
+
 {% block content %}
 <h1>Runs for {{ url }} (simplified)</h1>
 
