Remove left margin.

--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -15,7 +15,7 @@ Run list
     <i class="icon-search"></i> Search
 </a>
 
-<form action="{{ url('/index.php') }}" method="get" class="hide search-form form-inline">
+<form action="{{ url('/index.php') }}" method="get" class="row hide search-form form-inline">
     <a href="#" class="search-collapse close" title="Hide search form">&times;</a>
     <div class="control-group span4">
         <label class="control-label" for="start_date">Date range</label>
@@ -73,6 +73,7 @@ $(document).ready(function () {
         });
         return false;
     });
+
     $('.search-collapse').on('click', function () {
         searchForm.slideUp('fast', function () {
             searchExpand.show();
