--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -100,6 +100,10 @@ h1, h2, h3, h4, h5, h6,
     background: -webkit-linear-gradient(rgb(247, 247, 247), rgb(240, 240, 240));
     background: -moz-linear-gradient(rgb(247, 247, 247), rgb(240, 240, 240));
     background: linear-gradient(rgb(247, 247, 247), rgb(240, 240, 240));
+    -o-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
 }
 .searchbar form {
     margin-bottom: 0;
