Add - to titles.
It makes them slightly easier to read.

--- a/web/templates/runs/compare.twig
+++ b/web/templates/runs/compare.twig
@@ -2,7 +2,7 @@
 {% import 'macros/helpers.twig' as helpers %}
 
 {% block title %}
-Compare - {{ base_run.meta.simple_url }}
+- Compare - {{ base_run.meta.simple_url }}
 {% endblock %}
 
 {% block content %}
