--- a/web/templates/watch/list.twig
+++ b/web/templates/watch/list.twig
@@ -2,7 +2,7 @@
 {% import 'macros/helpers.twig' as helpers %}
 
 {% block title %}
-Watch - list
+- Watch - list
 {% endblock %}
 
 {% block content %}
