--- a/web/templates/runs/symbol-view.twig
+++ b/web/templates/runs/symbol-view.twig
@@ -2,7 +2,7 @@
 {% import 'macros/helpers.twig' as helpers %}
 
 {% block title %}
-Symbol - {{ symbol }}
+- Symbol - {{ symbol }}
 {% endblock %}
 
 {% block content %}
