--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -2,7 +2,7 @@
 {% import 'macros/helpers.twig' as helpers %}
 
 {% block title %}
-Profile - {{ result.meta.url }}
+- Profile - {{ result.meta.url }}
 {% endblock %}
 
 {% block content %}
