Remove stray </li>

--- a/web/templates/runs/callgraph.twig
+++ b/web/templates/runs/callgraph.twig
@@ -1,7 +1,7 @@
 {% extends 'layout/base.twig' %}
 
 {% block title %}
-- Callgraph - {{ profile.meta.url }} - {{ profile.meta('request_time.sec')|date(date_format) }}</li>
+- Callgraph - {{ profile.meta.url }} - {{ profile.meta('request_time.sec')|date(date_format) }}
 {% endblock %}
 
 {% block content %}
