--- a/web/templates/runs/callgraph.twig
+++ b/web/templates/runs/callgraph.twig
@@ -7,13 +7,13 @@
 {% block content %}
 <h1>Callgraph for {{ profile.meta.url }} on {{ profile.meta('request_time.sec')|date(date_format) }}</h1>
 
-<p class="alert alert-info">Methods that represent 1% or less of the entire execution will be omitted
+<p class="alert alert-info">Methods that represent 2% or less of the entire execution will be omitted
 from the callgraph result.</p>
 
 <div id="callgraph-image"></div>
 
 <p>Due to the limitations in how xhprof collects data, callgraphs are not 100% reflective of
-the actual method callgraph</p>
+the actual method callgraph.</p>
 
 {% endblock %}
 
