--- a/web/templates/runs/callgraph.twig
+++ b/web/templates/runs/callgraph.twig
@@ -1,11 +1,11 @@
 {% extends 'layout/base.twig' %}
 
 {% block title %}
-- Callgraph - {{ profile.meta.url }} - {{ profile.meta('request_time.sec')|date(date_format) }}
+- Callgraph - {{ profile.meta.url }} - {{ profile.meta('SERVER.REQUEST_TIME')|date(date_format) }}
 {% endblock %}
 
 {% block content %}
-<h1>Callgraph for {{ profile.meta.url }} on {{ profile.meta('request_time.sec')|date(date_format) }}</h1>
+<h1>Callgraph for {{ profile.meta.url }} on {{ profile.meta('SERVER.REQUEST_TIME')|date(date_format) }}</h1>
 
 <p class="alert alert-info">Methods that represent 2% or less of the entire execution will be omitted
 from the callgraph result.</p>
