Position tooltips correctly.
Get tooltips with value + function name in the correct place.

--- a/web/templates/runs/callgraph.twig
+++ b/web/templates/runs/callgraph.twig
@@ -10,7 +10,7 @@
 <p class="alert alert-info">Methods that represent 2% or less of the entire execution will be omitted
 from the callgraph result.</p>
 
-<div id="callgraph-image"></div>
+<div class="chart-container" id="callgraph-image"></div>
 
 <p>Due to the limitations in how xhprof collects data, callgraphs are not 100% reflective of
 the actual method callgraph.</p>
