Add view link to callgraph tooltip.
It is now really easy to see the related symbol data when
looking at a callgraph.

--- a/web/templates/runs/callgraph.twig
+++ b/web/templates/runs/callgraph.twig
@@ -21,7 +21,13 @@ the actual method callgraph.</p>
 <script src="js/callgraph.js"></script>
 <script>
 $(document).ready(function () {
-    Xhgui.callgraph('#callgraph-image', {{ callgraph|json_encode|raw }});
+    Xhgui.callgraph(
+        '#callgraph-image',
+        {{ callgraph|json_encode|raw }},
+        {
+            baseUrl: "{{ url('/symbol.php', {'id': profile.id|trim }) }}"
+        }
+    );
 });
 </script>
 {% endblock %}
