Make callgraph chart easier to use / read
* Make nodes sticky.
* Add arrows showing directionality.

--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -258,6 +258,9 @@ tr .no-results {
     stroke: #ccc;
     stroke-width: 1.5px;
 }
+.callgraph #arrowhead {
+    fill: #bbb;
+}
 
 /**
  * Run details
